--- a/Path Finding Visualizer/MainWindow.xaml
+++ b/Path Finding Visualizer/MainWindow.xaml
@@ -16,7 +16,7 @@
         <UniformGrid Name="grid" Grid.Column="1" Margin="10" Rows="30" Columns="50"/>
 
         <StackPanel Grid.Column="0" Orientation="Vertical" Background="Black">
-            
+            <ContentControl Content="{StaticResource StartExecutionIcon}" HorizontalAlignment="Center"/>
         </StackPanel>
     </Grid>
 </Window>
