--- a/Path Finding Visualizer/MainWindow.xaml
+++ b/Path Finding Visualizer/MainWindow.xaml
@@ -6,17 +6,39 @@
         xmlns:local="clr-namespace:Path_Finding_Visualizer"
         mc:Ignorable="d"
         Title="Path Finding Visualizer" Height="450" Width="800"
-        x:Name="Window">
+        x:Name="Window"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.08*"/>
+            <ColumnDefinition Width="0.05*"/>
+            <ColumnDefinition Width="0"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <UniformGrid Name="grid" Grid.Column="1" Margin="10" Rows="30" Columns="50"/>
+        <UniformGrid Name="grid" Grid.Column="2" Margin="10" Rows="30" Columns="50"/>
 
-        <StackPanel Grid.Column="0" Orientation="Vertical" Background="Black">
-            <ContentControl Content="{StaticResource StartExecutionIcon}" HorizontalAlignment="Center"/>
+        <StackPanel Grid.Column="0" Orientation="Vertical" Background="{StaticResource MenuBarBrush}">
+            <Button Name="StartPauseButton" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
+                <Button.Content>
+                    <Viewbox Stretch="Uniform">
+                        <ContentPresenter Content="{StaticResource StartExecutionIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
+                    </Viewbox>
+                </Button.Content>
+            </Button>
+            <Button Name="StopButton" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
+                <Button.Content>
+                    <Viewbox Stretch="Uniform">
+                        <ContentPresenter Content="{StaticResource StopExecutionIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
+                    </Viewbox>
+                </Button.Content>
+            </Button>
+            <Button Name="ClearGridButton" Click="ClearGridButton_Click" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
+                <Button.Content>
+                    <Viewbox Stretch="Uniform">
+                        <ContentPresenter Content="{StaticResource ClearGridIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
+                    </Viewbox>
+                </Button.Content>
+            </Button>
         </StackPanel>
     </Grid>
 </Window>
