--- a/Path Finding Visualizer/App.xaml
+++ b/Path Finding Visualizer/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Path_Finding_Visualizer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Path_Finding_Visualizer"
+             xmlns:local="clr-namespace:Path_Finding_Visualizer" xmlns:System="clr-namespace:System;assembly=netstandard"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -9,6 +9,7 @@
                 <ResourceDictionary x:Name="ColorsDictionary" Source="Resources/Colors.xaml"/>
                 <ResourceDictionary x:Name="IconsDictionary" Source="Resources/Icons.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <System:Double x:Key="DescriptableIconScale">0.5</System:Double>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
