--- a/Path Finding Visualizer/MainWindow.xaml
+++ b/Path Finding Visualizer/MainWindow.xaml
@@ -14,25 +14,25 @@
             <ColumnDefinition Width="0"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-
+        
         <UniformGrid Name="grid" Grid.Column="2" Margin="10" Rows="30" Columns="50"/>
 
-        <StackPanel Grid.Column="0" Orientation="Vertical" Background="{StaticResource MenuBarBrush}">
-            <Button Name="StartPauseButton" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
+        <StackPanel Name="IconBar" Grid.Column="0" Orientation="Vertical" Background="{StaticResource MenuBarBrush}">
+            <Button Name="StartPauseButton" Click="StartPauseButton_Click" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
                 <Button.Content>
                     <Viewbox Stretch="Uniform">
-                        <ContentPresenter Content="{StaticResource StartExecutionIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
+                        <ContentPresenter Name="StartPauseButtonContentPresenter" Content="{StaticResource StartExecutionIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
                     </Viewbox>
                 </Button.Content>
             </Button>
-            <Button Name="StopButton" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
+            <Button Name="StopButton" Click="StopButton_Click" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
                 <Button.Content>
                     <Viewbox Stretch="Uniform">
                         <ContentPresenter Content="{StaticResource StopExecutionIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
                     </Viewbox>
                 </Button.Content>
             </Button>
-            <Button Name="ClearGridButton" Click="ClearGridButton_Click" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
+            <Button Name="ClearGridButton" Click="ClearGridButton_Click" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}" Margin="0,30,0,40">
                 <Button.Content>
                     <Viewbox Stretch="Uniform">
                         <ContentPresenter Content="{StaticResource ClearGridIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
@@ -40,5 +40,17 @@
                 </Button.Content>
             </Button>
         </StackPanel>
+        <Viewbox Stretch="Uniform" Grid.Row="0" Margin="0,50,0,0" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Bottom">
+            <Viewbox.RenderTransform>
+                <ScaleTransform ScaleX="{StaticResource DescriptableIconScale}" ScaleY="{StaticResource DescriptableIconScale}"/>
+            </Viewbox.RenderTransform>
+            <StackPanel Orientation="Vertical">
+                <ContentPresenter Margin="0,10,0,0" Content="{StaticResource StartNodeIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
+                <ContentPresenter Margin="0,10,0,0" Content="{StaticResource TargetNodeIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
+            </StackPanel>
+        </Viewbox>
+
+        <StackPanel Name="DescriptionBar" Grid.Column="1" Orientation="Vertical" Background="{StaticResource MenuBarBrush}"/>
+
     </Grid>
 </Window>
