Added Algorithm Selection Combobox Speed Slider SettingsMenuBar

--- a/Path Finding Visualizer/App.xaml
+++ b/Path Finding Visualizer/App.xaml
@@ -10,6 +10,7 @@
                 <ResourceDictionary x:Name="IconsDictionary" Source="Resources/Icons.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <System:Double x:Key="DescriptableIconScale">0.5</System:Double>
+            <System:Double x:Key="SettingsBarScale">1</System:Double>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
