--- a/Path Finding Visualizer/MainWindow.xaml
+++ b/Path Finding Visualizer/MainWindow.xaml
@@ -11,14 +11,19 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.05*"/>
-            <ColumnDefinition Width="0"/>
+            <ColumnDefinition Width="0.1*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        
-        <UniformGrid Name="grid" Grid.Column="2" Margin="10" Rows="30" Columns="50"/>
 
-        <Rectangle Fill="{StaticResource MenuBarBrush}" Grid.Row="0"/>
-        <Viewbox Grid.Row="0" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Top">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.1*"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        
+        <UniformGrid Name="grid" Grid.Column="1" Grid.ColumnSpan="2" Grid.RowSpan="2" Margin="10" Rows="30" Columns="50"/>
+
+        <Rectangle Fill="{StaticResource MenuBarBrush}" Grid.RowSpan="2"/>
+        <Viewbox Grid.RowSpan="2" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Top">
             <StackPanel Name="IconBar" Orientation="Vertical">
                 <Button Name="MenuButton" Click="MenuButton_Click" Margin="0,0,0,20" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
                     <Button.Content>
@@ -42,7 +47,7 @@
                 </Button>
             </StackPanel>
         </Viewbox>
-        <Viewbox Grid.Row="0" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Bottom">
+        <Viewbox Grid.RowSpan="2" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Bottom">
             <Viewbox.RenderTransform>
                 <ScaleTransform ScaleX="{StaticResource DescriptableIconScale}" ScaleY="{StaticResource DescriptableIconScale}"/>
             </Viewbox.RenderTransform>
@@ -56,7 +61,21 @@
             </StackPanel>
         </Viewbox>
 
-        <StackPanel Name="DescriptionBar" Grid.Column="1" Orientation="Vertical" Background="{StaticResource MenuBarBrush}"/>
+        <Border HorizontalAlignment="Center" CornerRadius="0,0,20,20" Grid.ColumnSpan="3" BorderThickness="1" Background="Aqua" BorderBrush="Green">
+            <Viewbox Name="SettingsBar" Grid.ColumnSpan="3" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Center">
+                <StackPanel Orientation="Horizontal" Margin="20">
+                    <ComboBox Name="AlgorithmSelectionCB" Width="100" Background="{StaticResource SettingsBarBrush}">
+
+                    </ComboBox>
+                    <Slider Name="SpeedSlider" Width="100" Minimum="1" Maximum="50" TickFrequency="1" IsSnapToTickEnabled="True" Background="{StaticResource SettingsBarBrush}">
+
+                    </Slider>
+                </StackPanel>
+            </Viewbox>
+        </Border>
+        <StackPanel Name="DescriptionBar" Grid.Row="1" Grid.Column="1" Orientation="Vertical">
+            
+        </StackPanel>
 
     </Grid>
 </Window>
