Added Button Backgroudn change on hover Refactored code

--- a/Path Finding Visualizer/Resources/Colors.xaml
+++ b/Path Finding Visualizer/Resources/Colors.xaml
@@ -4,12 +4,13 @@
     <SolidColorBrush x:Key="GridStrokeBrush" Color="#949b9b"/>
     <SolidColorBrush x:Key="DefaultNodeBrush" Color="White"/>
     <SolidColorBrush x:Key="ExploredNodeBrush" Color="#29e2ea"/>
-    <SolidColorBrush x:Key="ShortestPathNodeBrush" Color="#bb54e3"/>
-    <SolidColorBrush x:Key="BorderNodeBrush" Color="#3c3c3c"/>
+    <SolidColorBrush x:Key="ShortestPathNodeBrush" Color="#7ab317"/>
+    <SolidColorBrush x:Key="BorderNodeBrush" Color="#2a044a"/>
     <SolidColorBrush x:Key="StartNodeBrush" Color="#1872E9"/>
     <SolidColorBrush x:Key="TargetNodeBrush" Color="#E94231"/>
-    <SolidColorBrush x:Key="IconBrush" Color="White"/>
-    <SolidColorBrush x:Key="MenuBarBrush" Color="Black"/>
+    <SolidColorBrush x:Key="IconBrush" Color="#f07241"/>
+    <SolidColorBrush x:Key="MenuBarBrush" Color="#0b2e59"/>
     <SolidColorBrush x:Key="SettingsBarBrush" Color="Black"/>
+    <SolidColorBrush x:Key="ButtonHoverBrush" Color="#23436a"/>
 
 </ResourceDictionary>
