--- a/Path Finding Visualizer/MainWindow.xaml
+++ b/Path Finding Visualizer/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Path_Finding_Visualizer"
+        xmlns:local="clr-namespace:Path_Finding_Visualizer" 
+        xmlns:usercontrols="clr-namespace:Path_Finding_Visualizer.UserControls"
         mc:Ignorable="d"
         Title="Path Finding Visualizer" Height="450" Width="800"
         x:Name="Window"
@@ -20,62 +21,90 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         
-        <UniformGrid Name="grid" Grid.Column="1" Grid.ColumnSpan="2" Grid.RowSpan="2" Margin="10" Rows="30" Columns="50"/>
+        <UniformGrid Name="grid" 
+                     Grid.Column="1" 
+                     Grid.ColumnSpan="2" 
+                     Grid.RowSpan="2" 
+                     Margin="10" 
+                     Rows="30" 
+                     Columns="50"/>
 
         <Rectangle Fill="{StaticResource MenuBarBrush}" Grid.RowSpan="2"/>
-        <Viewbox Grid.RowSpan="2" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Top">
-            <StackPanel Name="IconBar" Orientation="Vertical">
-                <Button Name="MenuButton" Click="MenuButton_Click" Margin="0,0,0,20" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
-                    <Button.Content>
-                        <ContentPresenter Content="{StaticResource MenuIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
-                    </Button.Content>
-                </Button>
-                <Button Name="StartPauseButton" Click="StartPauseButton_Click" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
-                    <Button.Content>
-                        <ContentPresenter Name="StartPauseButtonContentPresenter" Content="{StaticResource StartExecutionIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
-                    </Button.Content>
-                </Button>
-                <Button Name="StopButton" Click="StopButton_Click" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}">
-                    <Button.Content>
-                        <ContentPresenter Content="{StaticResource StopExecutionIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
-                    </Button.Content>
-                </Button>
-                <Button Name="ClearGridButton" Click="ClearGridButton_Click" Background="{StaticResource MenuBarBrush}" BorderBrush="{StaticResource MenuBarBrush}" Margin="0,30,0,0">
-                    <Button.Content>
-                        <ContentPresenter Content="{StaticResource ClearGridIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
-                    </Button.Content>
-                </Button>
+        <Viewbox Grid.RowSpan="2" 
+                 RenderTransformOrigin="0.5,0.5" 
+                 VerticalAlignment="Top">
+            <StackPanel Name="IconBar" 
+                        Orientation="Vertical">
+                <usercontrols:MenuButton x:Name="MenuButton"
+                                         Icon="{StaticResource MenuIcon}"
+                                         Description="Menu"/>
+                <usercontrols:MenuButton x:Name="StartPauseButton"
+                                         Icon="{StaticResource StartExecutionIcon}"
+                                         Description="Start"
+                                         ButtonClick="StartPauseButton_Click"/>
+                <usercontrols:MenuButton x:Name="StopButton"
+                                         Icon="{StaticResource StopExecutionIcon}"
+                                         Description="Stop"
+                                         ButtonClick="StopButton_Click"/>
+                <usercontrols:MenuButton x:Name="ClearGridButton"
+                                         Icon="{StaticResource ClearGridIcon}"
+                                         Description="Clear Grid"
+                                         Margin="0,30,0,0"
+                                         ButtonClick="ClearGridButton_Click"/>
             </StackPanel>
         </Viewbox>
-        <Viewbox Grid.RowSpan="2" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Bottom">
-            <Viewbox.RenderTransform>
-                <ScaleTransform ScaleX="{StaticResource DescriptableIconScale}" ScaleY="{StaticResource DescriptableIconScale}"/>
-            </Viewbox.RenderTransform>
-            <StackPanel Orientation="Vertical">
-                <ContentPresenter Margin="0,10,0,0" Content="{StaticResource StartNodeIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
-                <ContentPresenter Margin="0,10,0,0" Content="{StaticResource TargetNodeIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
-                <ContentPresenter Margin="0,10,0,0" Content="{StaticResource DefaultNodeIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
-                <ContentPresenter Margin="0,10,0,0" Content="{StaticResource BorderNodeIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
-                <ContentPresenter Margin="0,10,0,0" Content="{StaticResource ExploredNodeIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
-                <ContentPresenter Margin="0,10,0,0" Content="{StaticResource ShortestPathNodeIcon}" HorizontalAlignment="Center" Width="48" Height="48"/>
+        <Viewbox Grid.RowSpan="2" 
+                 RenderTransformOrigin="0.5,0.5" 
+                 VerticalAlignment="Bottom">
+            <StackPanel Orientation="Vertical" Margin="0,20">
+                <usercontrols:IconPresenter Icon="{StaticResource StartNodeIcon}"
+                                            Description="Start Node"/>
+                <usercontrols:IconPresenter Icon="{StaticResource TargetNodeIcon}"
+                                            Description="Target Node"/>
+                <usercontrols:IconPresenter Icon="{StaticResource DefaultNodeIcon}"
+                                            Description="Default Node"/>
+                <usercontrols:IconPresenter Icon="{StaticResource BorderNodeIcon}"
+                                            Description="Border Node"/>
+                <usercontrols:IconPresenter Icon="{StaticResource ExploredNodeIcon}"
+                                            Description="Explored Node"/>
+                <usercontrols:IconPresenter Icon="{StaticResource ShortestPathNodeIcon}"
+                                            Description="Shortest Path Node"/>
             </StackPanel>
         </Viewbox>
 
-        <Border HorizontalAlignment="Center" CornerRadius="0,0,20,20" Grid.ColumnSpan="3" BorderThickness="1" Background="Aqua" BorderBrush="Green">
-            <Viewbox Name="SettingsBar" Grid.ColumnSpan="3" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Center">
-                <StackPanel Orientation="Horizontal" Margin="20">
-                    <ComboBox Name="AlgorithmSelectionCB" Width="100" Background="{StaticResource SettingsBarBrush}">
+        <Viewbox Grid.ColumnSpan="3">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Border Grid.Row="1" CornerRadius="0,0,20,20" Grid.Column="1"  BorderThickness="1" Background="Aqua" BorderBrush="Green">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <ComboBox Margin="10,10,5,10" 
+                                  Grid.Column="0" 
+                                  Name="AlgorithmSelectionCB" 
+                                  Background="{StaticResource SettingsBarBrush}">
 
-                    </ComboBox>
-                    <Slider Name="SpeedSlider" Width="100" Minimum="1" Maximum="50" TickFrequency="1" IsSnapToTickEnabled="True" Background="{StaticResource SettingsBarBrush}">
+                        </ComboBox>
+                        <Slider Margin="5,10,10,10" 
+                                Grid.Column="1" 
+                                Name="SpeedSlider" 
+                                Minimum="1" 
+                                Maximum="50" 
+                                TickFrequency="1" 
+                                IsSnapToTickEnabled="True" 
+                                Background="{StaticResource SettingsBarBrush}" 
+                                HorizontalContentAlignment="Center">
 
-                    </Slider>
-                </StackPanel>
-            </Viewbox>
-        </Border>
-        <StackPanel Name="DescriptionBar" Grid.Row="1" Grid.Column="1" Orientation="Vertical">
-            
-        </StackPanel>
-
+                        </Slider>
+                    </Grid>
+                </Border>
+            </Grid>
+        </Viewbox>
     </Grid>
 </Window>
