--- a/Path Finding Visualizer/MainWindow.xaml
+++ b/Path Finding Visualizer/MainWindow.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="0.1*"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        
+
         <UniformGrid Name="grid" 
                      Grid.Column="1" 
                      Grid.ColumnSpan="2" 
@@ -51,6 +51,10 @@
                                          Description="Clear Grid"
                                          Margin="0,30,0,0"
                                          ButtonClick="ClearGridButton_Click"/>
+                <Border Background="Black"
+                        Height="50">
+                    <Path Data="M12 36V12h24v24Z" Fill="White"/>
+                </Border>
             </StackPanel>
         </Viewbox>
         <Viewbox Grid.RowSpan="2" 
