--- a/Path Finding Visualizer/UserControls/IconPresenter.xaml
+++ b/Path Finding Visualizer/UserControls/IconPresenter.xaml
@@ -7,8 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              x:Name="root">
-    <ContentPresenter Margin="15,10" 
+    <ContentPresenter Margin="{Binding Margin, ElementName=root}" 
                       Content="{Binding Icon, ElementName=root}" 
-                      HorizontalAlignment="Center" />
+                      HorizontalAlignment="Center"/>
 
 </UserControl>
