--- a/Path Finding Visualizer/UserControls/Node.xaml
+++ b/Path Finding Visualizer/UserControls/Node.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Path_Finding_Visualizer.UserControls.GridCell"
+﻿<UserControl x:Class="Path_Finding_Visualizer.UserControls.Node"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
